2004-12-15  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaValidatingReader.cs : xsi:* attributes are now handled via
	  XmlSchemaValidator.ValidateElement().
	  Removed some obsolete overrides.

2004-12-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaValidatingReader.cs : new file; another XmlReader 
	  implementation that handles XSD validation. It is an reference
	  application for XmlSchemaValidator.
	* XsdValidatingReader.cs : Use readerLineInfo for IXmlLineInfo.

2004-12-14  Atsushi Enomoto <atsushi@ximian.com>

	* XsdIdentityState.cs : use validation exception for 2.0.
	  ProcessMatch() does not have to return bool. Use break and continue
	  and reduced indentation.
	* XsdValidatingReader.cs : use validation exception for 2.0.
	  Added new XsdIDManager class and id handling is delegated to it.
	  XmlQualifiedName -> QName. AssessElementLocallyValidElement() does
	  not need XmlSchemaElement (it is context). Moved some static
	  methods to XmlSchemaUtil.cs. Collected key constraints stuff to a
	  region.

2004-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XsdKeyTable.cs : eliminated XmlReader dependency.
	* XsdValidatingReader.cs :
	  AssertIdentityConstraints() is now splited to selector validation
	  and field validation. Extracted EndKeyrefValidation() to process
	  keyref constraints.
	  Added ReadExternalSchema() and commonized xsi:schemaLocation
	  handling and xsi:noNamespaceSchemaLocation handling.
	* XsdIdentityState.cs :
	  Eliminated XsdValidatingReader dependency.
	  In XsdKeyEntryField, renamed KeySequence to OwnerSequence.
	  XsdKeyEntryFieldCollection is now based on CollectionBase.
	  In XsdKeyEntry, FieldMatches() is renamed to ProcessMatch() and
	  modified to accept splited XsdValidatingReader members.
	* XsdIdentityPath.cs : added default .ctor() and IsAttribute property.

2004-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XsdIdentityState.cs,
	  XsdIdentityPath.cs,
	  XsdKeyTable.cs : fixed mixed line ending.
